--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
   "require": {
     "symfony/routing": "^4.1",
-    "symfony/http-foundation": "^4.1"
+    "symfony/http-foundation": "^4.1",
+    "symfony/expression-language": "^4.1"
   }
 }
